--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-vue": "^9.3.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.11.1",
     "vite": "^2.9.9",
