--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
 		"prepare": "husky install",
 		"lint": "eslint src/**/*.* --fix"
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
 	"lint-staged": {
 		"*.{ts,vue,json}": [
 			"eslint --fix",
 			"git add"
-		]
+		],
+		"*.js": "eslint --cache --fix"
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
-		"lint-staged": "^13.0.3",
 		"unplugin-vue-components": "^0.22.4",
 		"vue": "^3.2.25",
 		"vue-router": "^4.1.3"
@@ -36,6 +31,7 @@
 		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-vue": "^9.3.0",
 		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
 		"typescript": "^4.5.4",
 		"unplugin-auto-import": "^0.11.1",
 		"vite": "^2.9.9",
