--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 		"*.{ts,vue,json}": [
 			"eslint --fix",
 			"git add"
-		],
-		"*.js": "eslint --cache --fix"
+		]
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
+		"pinia": "^2.0.18",
 		"unplugin-vue-components": "^0.22.4",
 		"vue": "^3.2.25",
 		"vue-router": "^4.1.3"
