--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc --noEmit && vite build",
+		"test": "vitest",
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"lint": "eslint src/**/*.* --fix"
@@ -35,6 +36,7 @@
 		"typescript": "^4.5.4",
 		"unplugin-auto-import": "^0.11.1",
 		"vite": "^2.9.9",
+		"vitest": "^0.21.1",
 		"vue-tsc": "^0.34.7"
 	}
 }
