--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
+		"echarts": "^5.3.3",
 		"pinia": "^2.0.18",
 		"unplugin-vue-components": "^0.22.4",
 		"vue": "^3.2.25",
